un po' di modifiche

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 <body style="background-color: blanchedalmond;">
     <h1 style="text-align: center;"><span style="background-color:beige">Piccole cose su di me!</span></h1>
     <br>
-    <p style="text-align: center;"> Ciao! mi chiamo Yena Kwak, ho 30 anni e sono coreana, di Seoul.
+    <p style="text-align: center;"> Ciao! mi chiamo Yena Kwak, ho 30 anni e coreana, di Seoul.
     Lí ho fatto un'esperienza in una compagnia di programmatori come UX designer.<br>
     Guardando loro ho cominciato a volere imparare a programmare.</p>
 <br><br>
-<img src="">
+
+<style>
+    .myphoto {justify-content: center;}
+</style>
+
+<div class="myphoto"> <img src="https://github.com/YenaKwak/EPICODE/blob/main/me.jpg?raw=true" alt="my photo" width="350" height="630"> </div>
+
+
+
 
 <style>
     div {display: flex;}
     .interessi {justify-content: center;}
     .attitudini {justify-content: center;}
     .contatti {justify-content: center;}
-    
-
 
 </style>
 <h3 style="text-align: center;">I miei interessi</h3>
@@ -37,11 +43,11 @@
 
 <h3 style="text-align: center;">Le mie attitudini</h3>
 <div class="attitudini">
-   <ul class="miei attitudini">
+   <ul class="le mie attitudini">
         <li>Leggere</li>
         <li>Passeggiare</li>
-        <li>Guardare il film</li>
-        <li>L’attività fisica</li>
+        <li>Guardare film</li>
+        <li>Sport</li>
     </ul>
 </div>
 <br>
